src/styles/components/GlassBeadGame.module.scss
@import '@styles/Variables';

.wrapper {
    padding-top: 60px;
    width: 100%;
    height: 100vh;
    .videoBackground {
        width: 100%;
        height: 100%;
        z-index: -1;
        position: absolute;
        border: none;
    }
}
.mainContent {
    width: 100%;
    height: calc(100% - 200px);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.comments {
    position: relative;
    padding-right: 20px;
    width: 350px;
    height: 100%;
    // border-right: 1px solid #ddd;
    background-color: $white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-shrink: 0;
    &.transparent {
        background-color: rgba($white, 0.3);
        > form {
            background-color: rgba(#f7f7f9, 0.2);
        }
        .closeCommentsBar {
            background-color: rgba($grey2, 0.2);
        }
    }
    &.hidden {
        margin-left: -330px;
    }
    > div {
        height: 100%;
        overflow-y: scroll;
        scroll-snap-type: y proximity;
    }
    > form {
        display: flex;
        padding: 10px;
        background-color: #f7f7f9;
    }
    .userComment {
        display: flex;
        flex-direction: row;
        margin: 10px;
        .commentText {
            margin-left: 10px;
            // header
            > div {
                > h1 {
                    font-size: 14px;
                    font-weight: 800;
                    margin: 0;
                }
                > p {
                    margin-left: 3px;
                    font-size: 14px;
                    color: $grey4;
                }
            }
            // comment
            > p {
                font-size: 14px;
            }
        }
    }
    .adminComment {
        display: flex;
        flex-direction: row;
        margin: 10px;
        color: rgb(163, 163, 163);
    }
    .closeCommentsBar {
        all: unset;
        position: absolute;
        // border-left: 1px solid $grey3;
        // border-right: 1px solid $grey3;
        cursor: pointer;
        display: flex;
        justify-content: center;
        align-items: center;
        right: 0;
        height: 100%;
        width: 20px;
        background-color: $grey2;
        > svg {
            color: $grey4;
            height: 18px;
        }
    }
}
.centerPanel {
    width: 100%;
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}
.gameControls {
    position: absolute;
    left: 20px;
    top: 20px;
    > p {
        margin-bottom: 5px;
    }
    .playerState {
        color: $grey4;
    }
    .gameLocked {
        display: flex;
        align-items: center;
        margin: 15px 0;
        > svg {
            width: 25px;
            height: 25px;
            opacity: 0.3;
            margin-right: 7px;
        }
        > p {
            color: $grey5;
        }
    }
}
.peopleInRoom {
    position: absolute;
    right: 20px;
    top: 20px;
    > p {
        margin-bottom: 10px;
    }
}
.videos {
    $width: 1280;
    $height: 720;
    $padding: 10px;

    // background-color: rgba(0,0,0,0.5);
    margin: $padding;
    padding: $padding;
    border-radius: 5px;
    //max-height: calc(100% - 280px);
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;

    .videoWrapper {
        display: flex;
        position: relative;
        margin-bottom: $padding;
        &:last-child { margin-bottom: 0 }
        > svg {
            position: absolute;
            width: 60px;
            height: 60px;
            top: calc(50% - 30px);
            left: calc(50% - 30px);
            color: $grey6;
        }
        > video {
            border-radius: 10px;
            background-color: $grey4;
            object-fit: cover;
        }
        > .videoUser {
            position: absolute;
            display: flex;
            flex-direction: row;
            align-items: center;
            margin: 7px;
            padding: 7px 10px;
            border-radius: 7px;
            background-color: rgba(255, 255, 255, 0.5);
        }
        > .videoButtons {
            position: absolute;
            bottom: 0;
            right: 0;
            margin: 8px 12px;
            display: flex;
            > button {
                all: unset;
                color: $white;
                cursor: pointer;
                display: flex;
                align-items: center;
                justify-content: center;
                &:not(:last-child) {
                    margin-right: 10px;
                }
                > svg {
                    width: 25px;
                    height: 25px;
                    opacity: 0.5;
                    &:hover {
                        opacity: 0.8;
                    }
                }
            }
        }
        // 1 - 2
        &.xl > video {
            width: $width / 3 + px;
            height: $height / 3 + px;
        }
        // 3
        &.lg > video {
                width: $width / 4 + px;
                height: $height / 4 + px;
        }
        // 4 - 6
        &.md > video {
                width: $width / 5 + px;
                height: $height / 5 + px;
        }
        // 7 +
        &.sm > video {
            width: $width / 6 + px;
            height: $height / 6 + px;
        }
    }
}
.position {
    width: 35px;
    height: 35px;
    background-color: $white;
    border-radius: 50%;
    margin-right: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.positionControls {
    height: 35px;
    margin-right: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    > button {
        all: unset;
        cursor: pointer;
        display: flex;
        //justify-content: center;
        color: $grey4;
        &:hover {
            color: $grey5;
        }
        &:disabled {
            color: $grey3;
            cursor: unset;
        }
        > svg {
            width: 16px;
            height: 16px;
            
        }
    }
    
}
.topic {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    //border: 1px solid $grey3;
    // box-shadow: 0 1px 15px 0 rgba(10, 8, 72, 0.05);
    background-color: #fbfbfb;
    box-shadow: 0 0 10px 0 rgba(10, 8, 72, 0.15);
    margin: 10px 0 30px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 3;
    > img {
        width: 100%;
        height: 100%;
        //opacity: 0.8;
    }
}
.topDNA {
    position: absolute;
    top: 170px;
    display: flex;
    flex-direction: column;
    z-index: 1;
    //opacity: 0.4;
    color: $grey2;
    > svg {
        height: 45px;
    }
}
.dna {
    &.top { top: 170px }
    &.bottom { top: 500px }
    position: absolute;
    
    display: flex;
    flex-direction: column;
    z-index: 1;
    //opacity: 0.4;
    color: #e6e9ef; // $grey3; //#c3dbff; //rgb(253, 213, 125);
    > svg {
        height: 45px;
    }
}
.timer {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 3;
    > .timerArcTitles {
        position: absolute;
        top: -1px;
        display: flex;
        flex-direction: column;
        align-items: center;
        > p {
            margin-bottom: 8px;
        }
        > span {
            font-size: 24px;
        }
    }
    > .mainBead {
        width: 160px;
        height: 160px;
        position: absolute;
        // border: 2px solid $grey3;
        background-color: #fbfbfb;
        border-radius: 10px;
        display: flex;
        align-items: center;
        justify-content: center;
        box-shadow: 0 1px 10px 0 rgba(10, 8, 72, 0.15);
        > img {
            width: 120px;
            height: 120px;
        }
    }
}
.grey {
    margin-top: 10px;
    color: $grey5;
}
.red {
    margin-top: 10px;
    color: $red;
}
.recordingFlag {
    width: 15px;
    height: 15px;
    border-radius: 50%;
    margin-left: 10px;
    &.recording {
        background-color: $red;
    }
    &.recordingNext {
        background-color: $orange;
    }
}
.soundWaveIcon {
    width: 200px;
    height: 200px;
}
.beads {
    position: relative;
    padding: 0 40px;
    background-color: $grey1;
    border-top: 1px solid #ddd;
    height: 200px;
    display: flex;
    flex-direction: row;
    align-items: center;
    z-index: 3;
    overflow-x: scroll;

    &.transparent {
        background-color: rgba($white, 0.3);
    }
}
@keyframes fadeInOpacity {
	0% { opacity: 0 }
	100% { opacity: 1 }
}
.beadWrapper {
    display: flex;
    flex-direction: row;
}
.bead {
    position: relative;
    width: 140px;
    height: 140px;
    background-color: white;
    box-shadow: 0 1px 10px 0 rgba(10, 8, 72, 0.15);
    border-radius: 10px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    // align-items: center;
    opacity: 1;
	animation-name: fadeInOpacity;
	animation-timing-function: ease-in;
	animation-duration: 1s;
    > audio {
        width: 100px;
    }
    // > img {
    //     /// position: absolute;
    //     width: 70px;
    //     height: 70px;
    // }
    > img {
        position: absolute;
        width: 80px;
        height: 80px;
        left: calc(50% - 40px);
        top: calc(50% - 40px);
    }
    .beadControls {
        // height: 15px;
        // // position: absolute;
        display: flex;
        // // align-items: center;
        // // justify-content: center;
        // width: 100%;
        > button {
            all: unset;
            cursor: pointer;
            display: flex;
            > svg {
                height: 18px;
                color: $blue5;
                // width: 15px;
                // opacity: 0.5;
                // color: rgb(198, 226, 252);
            }
        }
    }
}
.beadText {
    
}
.beadDivider {
    width: 50px;
    display: flex;
    flex-direction: row;
    //justify-content: center;
    align-items: center;
    opacity: 1;
	animation-name: fadeInOpacity;
	animation-timing-function: ease-in;
	animation-duration: 2s;
    > svg {
        transform: rotate(90deg);
        height: 50px;
        color: $grey3;
    }
}
.dividerLine {
    height: 2px;
    width: 40px;
    background-color: #ddd;
}
.dividerConnector {
    height: 40px;
    width: 40px;
}
// .gameControls {
//     margin-top: 10px;
//     display: flex;
//     flex-direction: column;
//     align-items: center;
//     > div {
//         display: flex;
//         align-items: center;
//         margin-bottom: 10px;
//         &:last-child {
//             margin-bottom: 0;
//         }
//     }
// }
.numberInput {
    border: none;
    background-color: white;
    width: 60px;
    height: 40px;
    border-radius: 5px;
    font-size: 16px;
    margin-right: 20px;
    padding: 5px 10px;
}

